--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ GOOGLE_GENAI_USE_VERTEXAI=TRUE
 GOOGLE_CLOUD_PROJECT=<your_project_id>
 GOOGLE_CLOUD_LOCATION=<your_project_location>
 GOOGLE_CLOUD_STORAGE_BUCKET=<your-storage-bucket>
+IMAGE_FILE_NAME=image.png
 
 # Streamlit
 REMOTE_AGENT_ENGINE_ID=9999999999999999999
